--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -17,7 +17,7 @@ a{text-decoration: none;}
 
 body {
   font-family: Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5;*/
 /*   width: 100%;
 height: 100%; */
 }
